Updated maven prod profile to be used by Heroku bis...

--- a/pom.xml
+++ b/pom.xml
@@ -116,11 +116,11 @@
 				</property>
 			</activation>
 			<properties>
-				<env.db.host>elvynia-RAMM-mongo-2-6-1.mongo-2-6.cloud.unit</env.db.host>
-				<env.db.port>27017</env.db.port>
-				<env.db.user>adminuabteujm</env.db.user>
-				<env.db.pwd>oflstod7</env.db.pwd>
-				<env.db.name>admin</env.db.name>
+				<env.db.host>ds011664.mlab.com</env.db.host>
+				<env.db.port>11664</env.db.port>
+				<env.db.user>heroku_x3xhmn0l</env.db.user>
+				<env.db.pwd>Madeitkom7</env.db.pwd>
+				<env.db.name>heroku_x3xhmn0l</env.db.name>
 			</properties>
 		</profile>
 		<profile>
