--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
 		<!-- Spring framework -->
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.3.3.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
 			<version>4.3.3.RELEASE</version>
 		</dependency>
